# C-PlusPlusProject

./: 1_Genres.cpp  1_Genres.h  1_GenresTesty.cpp  2_Film.cpp  2_Film.h  2_FilmTesty.cpp  3_CollecionTesty.cpp  3_Collection.cpp  3_Collection.h  4_User.cpp  4_User.h  4_UserTesty.cpp  5_Recommend.cpp  5_RecommendTesty.cpp  CMakeLists.txt  README.md  subor.txt
